@@ -28,7 +28,10 @@
 #include "mutexs.h"
 #include "zbxserver.h"
 
-static int		shm_id;
+#include "memalloc.h"
+#include "zbxalgo.h"
+
+static zbx_mem_info_t	*cache_mem = NULL;
 
 #define	LOCK_CACHE	zbx_mutex_lock(&cache_lock)
 #define	UNLOCK_CACHE	zbx_mutex_unlock(&cache_lock)
@@ -50,7 +53,6 @@ extern int		CONFIG_DBSYNCER_FREQUENCY;
 
 static int		ZBX_HISTORY_SIZE = 0;
 int			ZBX_SYNC_MAX = 1000;	/* Must be less than ZBX_HISTORY_SIZE */
-static int		ZBX_TREND_SIZE = 0;
 static int		ZBX_ITEMIDS_SIZE = 0;
 
 #define ZBX_IDS_SIZE	8
@@ -85,17 +87,17 @@ typedef union {
 ZBX_DC_HISTORY
 {
 	zbx_uint64_t	itemid;
-	int		clock;
-	unsigned char	value_type;
 	history_value_t	value_orig;
 	history_value_t	value;
-	unsigned char	value_null;
-	int		timestamp;
 	char		*source;
+	int		clock;
+	int		timestamp;
 	int		severity;
 	int		logeventid;
 	int		lastlogsize;
 	int		mtime;
+	unsigned char	value_type;
+	unsigned char	value_null;
 	unsigned char	keep_history;
 	unsigned char	keep_trends;
 };
@@ -103,13 +105,13 @@ ZBX_DC_HISTORY
 ZBX_DC_TREND
 {
 	zbx_uint64_t	itemid;
-	int		clock;
-	int		num;
-	unsigned char	value_type;
 	history_value_t	value_min;
 	history_value_t	value_avg;
 	history_value_t	value_max;
+	int		clock;
+	int		num;
 	int		disable_from;
+	unsigned char	value_type;
 };
 
 ZBX_DC_STATS
@@ -124,16 +126,16 @@ ZBX_DC_STATS
 
 ZBX_DC_CACHE
 {
+	zbx_hashset_t	trends;
+	ZBX_DC_STATS	stats;
+	ZBX_DC_HISTORY	*history;	/* [ZBX_HISTORY_SIZE] */
+	char		*text;		/* [ZBX_TEXTBUFFER_SIZE] */
+	zbx_uint64_t	*itemids;	/* items, processed by other syncers */
+	char		*last_text;
 	int		history_first;
 	int		history_num;
 	int		trends_num;
-	ZBX_DC_STATS	stats;
-	ZBX_DC_HISTORY	*history;	/* [ZBX_HISTORY_SIZE] */
-	ZBX_DC_TREND	*trends;	/* [ZBX_TREND_SIZE] */
-	char		*text;		/* [ZBX_TEXTBUFFER_SIZE] */
-	zbx_uint64_t	*itemids;	/* items, processed by other syncers */
 	int		itemids_alloc, itemids_num;
-	char		*last_text;
 };
 
 ZBX_DC_CACHE		*cache = NULL;
@@ -225,13 +227,13 @@ void	*DCget_stats(int request)
 		value_uint = CONFIG_TRENDS_CACHE_SIZE;
 		return &value_uint;
 	case ZBX_STATS_TREND_USED:
-		value_uint = cache->trends_num * sizeof(ZBX_DC_TREND);
+		value_uint = CONFIG_TRENDS_CACHE_SIZE - cache_mem->free_size;
 		return &value_uint;
 	case ZBX_STATS_TREND_FREE:
-		value_uint = CONFIG_TRENDS_CACHE_SIZE - cache->trends_num * sizeof(ZBX_DC_TREND);
+		value_uint = cache_mem->free_size;
 		return &value_uint;
 	case ZBX_STATS_TREND_PFREE:
-		value_double = 100 * ((double)(ZBX_TREND_SIZE - cache->trends_num) / ZBX_TREND_SIZE);
+		value_double = 100 * ((double)cache_mem->free_size / CONFIG_TRENDS_CACHE_SIZE);
 		return &value_double;
 	case ZBX_STATS_TEXT_TOTAL:
 		value_uint = CONFIG_TEXT_CACHE_SIZE;
@@ -267,21 +269,17 @@ void	*DCget_stats(int request)
  ******************************************************************************/
 static ZBX_DC_TREND	*DCget_trend(zbx_uint64_t itemid)
 {
-	int	index;
+	ZBX_DC_TREND	*ptr, trend;
 
-	index = get_nearestindex(cache->trends, sizeof(ZBX_DC_TREND), cache->trends_num, itemid);
-	if (index < cache->trends_num && cache->trends[index].itemid == itemid)
-		return &cache->trends[index];
+	if (NULL != (ptr = (ZBX_DC_TREND *)zbx_hashset_search(&cache->trends, &itemid)))
+		return ptr;
 
-	if (cache->trends_num == ZBX_TREND_SIZE)
-		return NULL;
+	memset(&trend, 0, sizeof(ZBX_DC_TREND));
+	trend.itemid = itemid;
+	ptr = (ZBX_DC_TREND *)zbx_hashset_insert(&cache->trends, &trend,
+			sizeof(ZBX_DC_TREND));
 
-	memmove(&cache->trends[index + 1], &cache->trends[index], sizeof(ZBX_DC_TREND) * (cache->trends_num - index));
-	memset(&cache->trends[index], 0, sizeof(ZBX_DC_TREND));
-	cache->trends[index].itemid = itemid;
-	cache->trends_num++;
-
-	return &cache->trends[index];
+	return ptr;
 }
 
 /******************************************************************************
@@ -299,7 +297,7 @@ static ZBX_DC_TREND	*DCget_trend(zbx_uint64_t itemid)
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static void	DCflush_trends(ZBX_DC_TREND *trends, int *trends_num)
+static void	DCflush_trends(ZBX_DC_TREND *trends, int *trends_num, int update_cache)
 {
 	const char	*__function_name = "DCflush_trends";
 	DB_RESULT	result;
@@ -308,7 +306,7 @@ static void	DCflush_trends(ZBX_DC_TREND *trends, int *trends_num)
 	history_value_t	value_min, value_avg, value_max;
 	unsigned char	value_type;
 	zbx_uint64_t	*ids = NULL, itemid;
-	int		ids_alloc, ids_num = 0, index;
+	int		ids_alloc, ids_num = 0;
 	ZBX_DC_TREND	*trend = NULL;
 	const char	*table_name;
 #ifdef HAVE_MYSQL
@@ -386,14 +384,13 @@ static void	DCflush_trends(ZBX_DC_TREND *trends, int *trends_num)
 			trend->disable_from = clock;
 
 			/* if 'trends' is not a primary trends buffer */
-			if (trends != cache->trends)
+			if (0 != update_cache)
 			{
 				LOCK_TRENDS;
 
 				/* we update it too */
-				index = get_nearestindex(cache->trends, sizeof(ZBX_DC_TREND), cache->trends_num, itemid);
-				if (index < cache->trends_num && cache->trends[index].itemid == itemid)
-					cache->trends[index].disable_from = clock;
+				if (NULL != (trend = zbx_hashset_search(&cache->trends, &itemid)))
+					trend->disable_from = clock;
 
 				UNLOCK_TRENDS;
 			}
@@ -689,19 +686,12 @@ static void	DCflush_trend(ZBX_DC_TREND *trend, ZBX_DC_TREND **trends, int *trend
  ******************************************************************************/
 static void	DCadd_trend(ZBX_DC_HISTORY *history, ZBX_DC_TREND **trends, int *trends_alloc, int *trends_num)
 {
-	ZBX_DC_TREND	*trend = NULL, trend_static;
-	size_t		sz;
+	ZBX_DC_TREND	*trend = NULL;
 	int		hour;
 
-	sz = sizeof(ZBX_DC_TREND);
 	hour = history->clock - history->clock % 3600;
 
-	if (NULL == (trend = DCget_trend(history->itemid)))
-	{
-		trend = &trend_static;
-		memset(trend, 0, sz);
-		trend->itemid = history->itemid;
-	}
+	trend = DCget_trend(history->itemid);
 
 	if (trend->num > 0 && (trend->clock != hour || trend->value_type != history->value_type))
 		DCflush_trend(trend, trends, trends_alloc, trends_num);
@@ -729,13 +719,6 @@ static void	DCadd_trend(ZBX_DC_HISTORY *history, ZBX_DC_TREND **trends, int *tre
 			break;
 	}
 	trend->num++;
-
-	if (trend == &trend_static)
-	{
-		zabbix_log(LOG_LEVEL_WARNING, "Insufficient space for trends."
-				" Please increase TrendCacheSize parameter.");
-		DCflush_trend(trend, trends, trends_alloc, trends_num);
-	}
 }
 
 /******************************************************************************
@@ -782,7 +765,7 @@ static void	DCmass_update_trends(ZBX_DC_HISTORY *history, int history_num)
 	UNLOCK_TRENDS;
 
 	while (trends_num > 0)
-		DCflush_trends(trends, &trends_num);
+		DCflush_trends(trends, &trends_num, 1);
 
 	zbx_free(trends);
 
@@ -806,7 +789,10 @@ static void	DCmass_update_trends(ZBX_DC_HISTORY *history, int history_num)
  ******************************************************************************/
 static void	DCsync_trends()
 {
-	const char	*__function_name = "DCsync_trends";
+	const char		*__function_name = "DCsync_trends";
+	zbx_hashset_iter_t	iter;
+	ZBX_DC_TREND		*trends = NULL, *trend;
+	int			trends_alloc = 0, trends_num = 0;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() trends_num:%d",
 			__function_name, cache->trends_num);
@@ -815,14 +801,19 @@ static void	DCsync_trends()
 
 	LOCK_TRENDS;
 
-	while (cache->trends_num > 0)
-	{
-		DBbegin();
-		DCflush_trends(cache->trends, &cache->trends_num);
-		DBcommit();
-	}
+	zbx_hashset_iter_reset(&cache->trends, &iter);
+
+	while (NULL != (trend = (ZBX_DC_TREND *)zbx_hashset_iter_next(&iter)))
+		DCflush_trend(trend, &trends, &trends_alloc, &trends_num);
 
 	UNLOCK_TRENDS;
+
+	DBbegin();
+
+	while (trends_num > 0)
+		DCflush_trends(trends, &trends_num, 0);
+
+	DBcommit();
 
 	zabbix_log(LOG_LEVEL_WARNING, "Syncing trends data...done.");
 
@@ -2580,14 +2571,27 @@ void	DCadd_history_log(zbx_uint64_t itemid, char *value_orig, int clock, int tim
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
+
+static void	*__cache_mem_malloc_func(void *old, size_t size)
+{
+	return zbx_mem_malloc(cache_mem, old, size);
+}
+
+static void	*__cache_mem_realloc_func(void *old, size_t size)
+{
+	return zbx_mem_realloc(cache_mem, old, size);
+}
+
+static void	__cache_mem_free_func(void *ptr)
+{
+	zbx_mem_free(cache_mem, ptr);
+}
+
 void	init_database_cache(zbx_process_t p)
 {
 	const char	*__function_name = "init_database_cache";
 	key_t		shm_key;
 	size_t		sz;
-	void		*ptr;
-
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	zbx_process = p;
 
@@ -2598,34 +2602,18 @@ void	init_database_cache(zbx_process_t p)
 	}
 
 	ZBX_HISTORY_SIZE = CONFIG_HISTORY_CACHE_SIZE / sizeof(ZBX_DC_HISTORY);
-	ZBX_TREND_SIZE = CONFIG_TRENDS_CACHE_SIZE / sizeof(ZBX_DC_TREND);
 	if (ZBX_SYNC_MAX > ZBX_HISTORY_SIZE)
 		ZBX_SYNC_MAX = ZBX_HISTORY_SIZE;
 	ZBX_ITEMIDS_SIZE = CONFIG_DBSYNCER_FORKS * ZBX_SYNC_MAX;
 
 	sz = sizeof(ZBX_DC_CACHE);
 	sz += ZBX_HISTORY_SIZE * sizeof(ZBX_DC_HISTORY);
-	sz += ZBX_TREND_SIZE * sizeof(ZBX_DC_TREND);
+	sz += CONFIG_TRENDS_CACHE_SIZE;
 	sz += CONFIG_TEXT_CACHE_SIZE;
 	sz += ZBX_ITEMIDS_SIZE * sizeof(zbx_uint64_t);
 	sz += sizeof(ZBX_DC_IDS);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() size:%d", __function_name, (int)sz);
-
-	if (-1 == (shm_id = zbx_shmget(shm_key, sz)))
-	{
-		zabbix_log(LOG_LEVEL_CRIT, "Can't allocate shared memory for database cache");
-		exit(FAIL);
-	}
-
-	ptr = shmat(shm_id, NULL, 0);
-
-	if ((void*)(-1) == ptr)
-	{
-		zabbix_log(LOG_LEVEL_CRIT, "Can't attach shared memory for database cache. [%s]",
-				strerror(errno));
-		exit(FAIL);
-	}
 
 	if (ZBX_MUTEX_ERROR == zbx_mutex_create_force(&cache_lock, ZBX_MUTEX_CACHE))
 	{
@@ -2645,30 +2633,31 @@ void	init_database_cache(zbx_process_t p)
 		exit(FAIL);
 	}
 
-	cache = ptr;
+	zbx_mem_create(&cache_mem, shm_key, ZBX_NO_MUTEX, sz, "database cache");
+
+	cache = (ZBX_DC_CACHE *)__cache_mem_malloc_func(NULL, sizeof(ZBX_DC_CACHE));
 	cache->history_first = 0;
 	cache->history_num = 0;
 	cache->trends_num = 0;
-
-	ptr += sizeof(ZBX_DC_CACHE);
-	cache->history = ptr;
-
-	ptr += ZBX_HISTORY_SIZE * sizeof(ZBX_DC_HISTORY);
-	cache->trends = ptr;
-
-	ptr += ZBX_TREND_SIZE * sizeof(ZBX_DC_TREND);
-	cache->text = ptr;
+	cache->history = (ZBX_DC_HISTORY *)__cache_mem_malloc_func(NULL, ZBX_HISTORY_SIZE * sizeof(ZBX_DC_HISTORY));
+	cache->text = (char *)__cache_mem_malloc_func(NULL, CONFIG_TEXT_CACHE_SIZE);
 	cache->last_text = cache->text;
-
-	ptr += CONFIG_TEXT_CACHE_SIZE;
-	cache->itemids = ptr;
+	cache->itemids = (zbx_uint64_t *)__cache_mem_malloc_func(NULL, ZBX_ITEMIDS_SIZE * sizeof(zbx_uint64_t));
 	cache->itemids_alloc = ZBX_ITEMIDS_SIZE;
 	cache->itemids_num = 0;
 
-	ptr += ZBX_ITEMIDS_SIZE * sizeof(zbx_uint64_t);
-	ids = ptr;
+	ids = (ZBX_DC_IDS *)__cache_mem_malloc_func(NULL, sizeof(ZBX_DC_IDS));
 	memset(ids, 0, sizeof(ZBX_DC_IDS));
 	memset(&cache->stats, 0, sizeof(ZBX_DC_STATS));
+
+#define	INIT_HASHSET_SIZE	1000 /* should be calculated dynamically based on trends size? */
+
+	zbx_hashset_create_ext(&cache->trends, INIT_HASHSET_SIZE,
+			ZBX_DEFAULT_UINT64_HASH_FUNC, ZBX_DEFAULT_UINT64_COMPARE_FUNC,
+			__cache_mem_malloc_func, __cache_mem_realloc_func,
+			__cache_mem_free_func);
+
+#undef	INIT_HASHSET_SIZE
 
 	if (NULL == sql)
 		sql = zbx_malloc(sql, sql_allocated);
@@ -2728,14 +2717,8 @@ void	free_database_cache()
 	LOCK_TRENDS;
 	LOCK_CACHE_IDS;
 
-	if (-1 == shmctl(shm_id, IPC_RMID, 0))
-	{
-		zabbix_log(LOG_LEVEL_WARNING, "Can't remove shared memory"
-				" for database cache. [%s]",
-				strerror(errno));
-	}
-
 	cache = NULL;
+	zbx_mem_destroy(cache_mem);
 
 	UNLOCK_CACHE_IDS;
 	UNLOCK_TRENDS;
