@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBXNEXT-323] improved bad performance of the trends for large number of items (Sasha)
  - [ZBX-1436] fixed trigger events display after next steps  monitoring -> triggers -> click on any event time (Maxim Andruhovich / AM)
  - [ZBX-1532] added screen name to visual screen editing form (when adding screen rows and cols) (Maxim Andruhovich / AM)
  - [ZBX-2438] fixed configuration of ssh2 on FreeBSD. Thanks to Alex Deiter (asaveljevs)
